@@ -5,10 +5,18 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
+import java.util.Arrays;
+import java.util.Collection;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpHeaders;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.User;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 @RequiredArgsConstructor
@@ -16,25 +24,39 @@ import org.springframework.web.filter.OncePerRequestFilter;
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private final JwtProvider provider;
+    private static final String EMPTY = "<EMPTY>";
 
     @Override
     public void doFilterInternal(HttpServletRequest request, HttpServletResponse response,
         FilterChain chain) throws IOException, ServletException {
-        String token = resolveToken(request);
+        String token = extractTokenFromHeader(request);
         if (token != null && !token.trim().isEmpty() && provider.validateToken(token)) {
-            Authentication auth = provider.getAuthentication(token);
-            SecurityContextHolder.getContext().setAuthentication(auth);
+            JwtPayload jwtPayload = provider.resolveToken(token);
+            SecurityContextHolder.getContext()
+                .setAuthentication(createAuthenticationToken(jwtPayload));
         }
         chain.doFilter(request, response);
     }
 
-    private String resolveToken(HttpServletRequest request) {
-        String bearerToken = request.getHeader(JwtProperties.HEADER_STRING);
-        log.info("[resolveToken] JwtProvider: HTTP 헤더에서 Token 값 추출");
-        if (bearerToken != null && !bearerToken.trim().isEmpty() && bearerToken.startsWith(
-            JwtProperties.TOKEN_PREFIX)) {
-            return bearerToken.split(" ")[1].trim();
+    private String extractTokenFromHeader(HttpServletRequest request) {
+        String extractedHeaderValue = request.getHeader(HttpHeaders.AUTHORIZATION);
+
+        log.debug("[resolveToken] JwtProvider: HTTP 헤더에서 Token 값 추출");
+
+        if (extractedHeaderValue != null && !extractedHeaderValue.isBlank()
+            && extractedHeaderValue.startsWith(JwtProperties.TOKEN_PREFIX)) {
+            return extractedHeaderValue.substring(JwtProperties.TOKEN_PREFIX.length());
         }
         return null;
+    }
+
+    private Authentication createAuthenticationToken(JwtPayload jwtPayload) {
+        Collection<? extends GrantedAuthority> authorities = Arrays.stream(
+                jwtPayload.grantedAuthorities().split(","))
+            .map(SimpleGrantedAuthority::new)
+            .toList();
+
+        UserDetails principal = new User(jwtPayload.name(), EMPTY, authorities);
+        return UsernamePasswordAuthenticationToken.authenticated(principal, EMPTY, authorities);
     }
 }
